fixed dasboard overflow

--- a/app/assets/stylesheets/custom.css.less
+++ b/app/assets/stylesheets/custom.css.less
@@ -116,6 +116,7 @@
 	.modal-dialog {
 	  width: 100%;
 	  height: 100%;
+		overflow-y: auto;
 	  margin: 0;
 	  padding: 0;
 		background-color:black;
@@ -125,6 +126,7 @@
 	.modal-content {
 		color:white;
 	  height: 100%;
+		overflow-y: auto;
 	  border-radius: 0;
 		background-color:black;
 		opacity:0.9;
